# pfaedle

./: .gitignore  .gitmodules  AGENT_PLAYBOOK.md  CMakeLists.txt  OSM-FILTER.md  README.md  baseline.json  pbf-candidate-filtered.json  pbf-candidate.json  pfaedle.cfg  report-caching.json  stats.json
bench/: compare_reports.py  compute_quality.py  datasets.yaml  run_bench.sh
src/: CMakeLists.txt
src/pfaedle/: CMakeLists.txt  PfaedleMain.cpp
src/pfaedle/config/: ConfigReader.cpp  MotConfig.h  MotConfigReader.cpp  PfaedleConfig.h
src/pfaedle/gtfs/: Writer.cpp
src/pfaedle/osm/: OsmBuilder.cpp  OsmBuilder.h  OsmPbfReader.cpp  OsmPbfReader.h
src/pfaedle/osm/source/: OsmSource.h  PBFSource.cpp  PBFSource.h  XMLSource.cpp  XMLSource.h
src/pfaedle/router/: Router.tpp  ShapeBuilder.cpp  ShapeBuilder.h  Stats.h  TripCache.cpp  TripCache.h  Weights.h
src/pfaedle/tests/: TestMain.cpp
src/util/: CMakeLists.txt  JobQueue.h  Misc.cpp  Misc.h  String.h  Test.h
src/util/geo/: Box.h  Collection.h  DE9IMatrix.h  Geo.cpp  Geo.h  Geo.tpp  Grid.h  IntervalIdx.h  Line.h  Point.h  PolyLine.h  PolyLine.tpp  Polygon.h
src/util/geo/output/: GeoGraphJsonOutput.tpp  GeoJsonOutput.h  GeoJsonOutput.tpp
src/util/http/: Server.cpp
src/util/log/: Log.h
src/util/tests/: CMakeLists.txt  GeoTest.cpp  GeoTest.h  QuadTreeTest.cpp  TestMain.cpp
src/util/xml/: XmlWriter.cpp  XmlWriter.h
